product box spacing fix with font size

--- a/css/styles.css
+++ b/css/styles.css
@@ -424,7 +424,7 @@ footer {
     /* PRODUCT BOXES */
 
     .product-link {
-        font-size: 2.25rem;
+        font-size: 1.7rem;
     }
 
     .products-item {
@@ -513,6 +513,10 @@ main {
 
 h1 {
     font-size: 4.5rem;
+}
+
+.product-link {
+    font-size: 2.25rem;
 }
 
 
